// IPSec model

syntax = "proto3";

package netproto;

// Mandatory imports.
import "google/api/annotations.proto";
import public "github.com/pensando/sw/venice/utils/apigen/annotations/includes.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/pensando/sw/api/meta.proto";



// Common MatchSelector.
message MatchSelector {
    // Automatically interpret the string as an octet, a CIDR or an hyphen separated range
    repeated string Addresses          = 1 [(gogoproto.jsontag) = "addresses,omitempty"];

    // Match on the App info
    repeated ProtoPort ProtoPorts      = 2 [(gogoproto.jsontag) = "proto-ports,omitempty"];

}

// ProtoPort captures protocol and port
message ProtoPort {
    // Protocol for the app.
    string Protocol     = 1 [(gogoproto.jsontag) = "protocol,omitempty"];

    // Port for the app
    string Port         = 2 [(gogoproto.jsontag) = "port,omitempty"];
}
